final fix functions

--- a/js/netlify.toml
+++ b/js/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  functions = "netlify/functions"
+  functions = "functions"
 
 [[redirects]]
   from = "/tables/*"
   to = "/.netlify/functions/tables/:splat"
   status = 200
-
+  
